# Danil_Oleh_20120_OOPR

./: 1 (2).ipynb  3_Class_methods_Parameter_self (3)+.ipynb  4_+.ipynb  5_Task+.ipynb  5_Tasks_0_1 +.ipynb  7_Tasks_0_1+.ipynb  7_Tasks_0_2+.ipynb  proverka.py  ships.py  testlistint.py
2/poetry/: 1 (2).ipynb  listint.py
2/poetry/list_integer_project/: pyproject.toml
2/poetry/list_integer_project/list_integer_project/: __main__.py  list_integer.py
2/poetry/list_integer_project/tests/: test_list_integer_project.py
2/сервера/: myclient.py  myserver.py  sensor_data.proto  sensor_data_pb2.py
Task_1/: 1_Lect_Python_OOPs_Concepts+.ipynb  2_Classes,_objects,_attributes+.ipynb
Task_4/: 4_Task +.ipynb  4_Task_static_class_method_1+.ipynb
Task_5/: 5_Tasks_0_2+.ipynb
